maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:7: error: '=>' expected but '}' found.
  }
  ^