maze.island.IslandMaze.scala.code
override def run() {
  var etat = 0;
  etat match {
    case 0 => courirNord(); etat = 1
    case 1 
  }
}

def courirNord() {
  while (!estFaceMur) {
    forward();
  }
  if (estFaceMur) {
    right();
  }
}